########################################
# Headers
########################################

cgbittorrent_header = \
	cybergarage/bittorrent/cbencoding.h \
	cybergarage/bittorrent/cbittorrent.h \
	cybergarage/bittorrent/cdictionary.h \
	cybergarage/bittorrent/chttp.h \
	cybergarage/bittorrent/cmetainfo.h \
	cybergarage/bittorrent/cpeer.h \
	cybergarage/bittorrent/csha1.h \
	cybergarage/bittorrent/ctracker.h

########################################
# Library
########################################

nobase_include_HEADERS = \
	$(cgbittorrent_header)
